--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "gulp-nodeunit": "0.0.5",
     "gulp-nodeunit-runner": "^0.2.2",
     "gulp-rename": "^1.2.2",
+    "gulp-s3-upload": "^1.6.1",
+    "gulp-template": "^4.0.0",
     "gulp-uglify": "^1.5.1",
     "gulp-wrap": "^0.11.0",
     "gulp-zip": "~3.2.0",
@@ -43,7 +45,7 @@
     "nock": "^8.0.0",
     "nodeunit": "^0.9.1",
     "oauth": "^0.9.14",
-    "requestretry": "^1.6.0",
+    "requestretry": "^1.12.0",
     "tape": "^4.5.1",
     "when": "^3.7.7"
   }
